--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Fit Track</title>
 </head>
 
-<body>
+<body class="bg-gray-100">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
